fix text alignment change

--- a/app/site.styl
+++ b/app/site.styl
@@ -51,7 +51,7 @@ body
     h1.logo-text
       font-size 3.2em
       font-weight bold
-      margin 0 auto .25em
+      margin 0 0 .25em
 
     p
       font-size 1.3em
